2006-05-29 Ian Rutt
 * spelling mistakes in glint_vars.def corrected. (Thanks to Oli Browne)

2006-05-21 Stewart Jamieson
 * glide_vars.def: annual massbalance can be averaged over time
 * glide_types.f90: add new variable for averaging annual 
   massbalance

2006-05-18 Ian Rutt
 * Minor bugfix to profiling (mistake in glide_stop.f90 - non-existent
 derived type element)

2006-05-10 Ian Rutt
 * Minor enhancements/bugfixes to EISMINT3GL driver
 * Minor doc change in glide_types.f90 (thanks, Oli)
	
2006-05-02 Ian Rutt
 * Added temperature half-range to glint output variables as glint_arng
 * Cleared up series of important confusions/bugs in mass-balance
 calculations in glint. Note that all mass-balance calculations in glint,
 including in the two PDD schemes are done in terms of water-equivalent
 depths. The mass balance is then converted to ice-equivalent depth at the
 point where the glide timestep subroutines are called.
	
2006-04-27 Ian Rutt
 * Final version of EISMINT3 Greenland scenario. Can choose to start from
 present-day ice sheet or from no ice.
 * Added new calving scheme (marine ice edge/threshold based) and tidied
 up calving code (removed strange unknown option which was left over from
 old model)
	
2006-04-25 Ian Rutt
 * Removed redundant GLIDE options (sliding_law and stress_calc)

2006-04-20 Magnus Hagdorn
 * configure.in: when looking for Sun compiler also grep for Forte

2006-04-20 Ian Rutt
 * Added driver for EISMINT3 Greenland scenario, based on Magi's EISMINT
 1 & 2 drivers.
 * Added option to specify topography as being in isostatic equilibrium
 and thus calculate relaxed topography on the fly.

2006-02-22 Ian Rutt
 * Corrected CF mapping compliance in glimmer_CFproj.f90; this time,
 changed LAEA projection.

2006-02-09 Ian Rutt
 * Rewrote parts of glint_initialise to allow the specification of an
   array of parameter files for individual instances in the API, as an
   alternative to a top-level parameter file that points to the